--- a/src/Interfaces/Officers.form
+++ b/src/Interfaces/Officers.form
@@ -152,6 +152,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Atr&#xe1;s"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton2MouseClicked"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel2">
       <Properties>
@@ -302,11 +305,13 @@
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
+              <StringArray count="6">
                 <StringItem index="0" value="Seleccione"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+                <StringItem index="1" value="C&#xe9;dula de Ciudadania"/>
+                <StringItem index="2" value="Tarjeta de Identidad"/>
+                <StringItem index="3" value="C&#xe9;dula de Extranger&#xed;a"/>
+                <StringItem index="4" value="Pasaporte"/>
+                <StringItem index="5" value="Registro Civil"/>
               </StringArray>
             </Property>
           </Properties>
@@ -341,11 +346,10 @@
         <Component class="javax.swing.JComboBox" name="jComboBox3">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
+              <StringArray count="3">
                 <StringItem index="0" value="Seleccione"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+                <StringItem index="1" value="Epidemi&#xf3;logo"/>
+                <StringItem index="2" value="Auxiliar Enfermer&#xed;a"/>
               </StringArray>
             </Property>
           </Properties>
@@ -382,9 +386,9 @@
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
                 <StringItem index="0" value="Seleccione"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+                <StringItem index="1" value="Medicina"/>
+                <StringItem index="2" value="Enfermer&#xed;a"/>
+                <StringItem index="3" value="Farmacia"/>
               </StringArray>
             </Property>
           </Properties>
