--- a/src/Interfaces/Patients.form
+++ b/src/Interfaces/Patients.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.JLabel" name="jLabel14">
       <Properties>
@@ -269,11 +269,13 @@
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
+              <StringArray count="6">
                 <StringItem index="0" value="Seleccione"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+                <StringItem index="1" value="C&#xe9;dula de Ciudadania"/>
+                <StringItem index="2" value="Tarjeta de Identidad"/>
+                <StringItem index="3" value="C&#xe9;dula de Extranger&#xed;a"/>
+                <StringItem index="4" value="Pasaporte"/>
+                <StringItem index="5" value="Registro Civil"/>
               </StringArray>
             </Property>
           </Properties>
@@ -331,11 +333,13 @@
         <Component class="javax.swing.JComboBox" name="jComboBox2">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
+              <StringArray count="6">
                 <StringItem index="0" value="Seleccione"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+                <StringItem index="1" value="Infancia (6 - 11 a&#xf1;os)"/>
+                <StringItem index="2" value="Adolecencia (12 - 18 a&#xf1;os)"/>
+                <StringItem index="3" value="Juventud (14 - 26 a&#xf1;os)"/>
+                <StringItem index="4" value="Adultez (27 - 59 a&#xf1;os)"/>
+                <StringItem index="5" value="Vejez (60 a&#xf1;os - m&#xe1;s)"/>
               </StringArray>
             </Property>
           </Properties>
@@ -379,6 +383,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Atr&#xe1;s"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton2MouseClicked"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
